--- a/app/src/main/res/layout/activity_seasondis.xml
+++ b/app/src/main/res/layout/activity_seasondis.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/beerza">
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -188,8 +187,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="counsel"
-                        android:id="@+id/button33"
-                        android:background="@drawable/button_shape1" />
+                        android:id="@+id/button11"
+                        android:background="@drawable/button_shape7" />
                 </LinearLayout>
 
             </LinearLayout>
