--- a/app/src/main/res/drawable/button_shape.xml
+++ b/app/src/main/res/drawable/button_shape.xml
@@ -4,11 +4,11 @@
     android:thickness="1dp"
     android:shape="rectangle">
     <stroke android:width="1dp"
-        android:color="#00bb8f"/>
+        android:color="#0004ff"/>
     <corners android:radius="5dp" />
     <gradient
-        android:startColor="#00bb8f"
-        android:endColor="#00bb8f"
+        android:startColor="#0004ff"
+        android:endColor="#0004ff"
         android:type="linear"
         android:angle="270"/>
 </shape>
