--- a/app/src/main/res/drawable/button_shape1.xml
+++ b/app/src/main/res/drawable/button_shape1.xml
@@ -3,11 +3,11 @@
     android:thickness="1dp"
     android:shape="rectangle">
     <stroke android:width="1dp"
-        android:color="#009dff"/>
+        android:color="#31b700"/>
     <corners android:radius="5dp" />
     <gradient
-        android:startColor="#009dff"
-        android:endColor="#009dff"
+        android:startColor="#31b700"
+        android:endColor="#31b700"
         android:type="linear"
         android:angle="270"/>
 </shape>
