--- a/app/src/main/res/drawable/button_shape2.xml
+++ b/app/src/main/res/drawable/button_shape2.xml
@@ -4,11 +4,11 @@
     android:thickness="1dp"
     android:shape="rectangle">
     <stroke android:width="1dp"
-        android:color="#ff8000"/>
+        android:color="#009900"/>
     <corners android:radius="5dp" />
     <gradient
-        android:startColor="#ff8000"
-        android:endColor="#ff8000"
+        android:startColor="#009900"
+        android:endColor="#009900"
         android:type="linear"
         android:angle="270"/>
 </shape>
