--- a/app/src/main/res/drawable/button_shape3.xml
+++ b/app/src/main/res/drawable/button_shape3.xml
@@ -4,11 +4,11 @@
     android:thickness="1dp"
     android:shape="rectangle">
     <stroke android:width="1dp"
-        android:color="#1900ff"/>
+        android:color="#ff0004"/>
     <corners android:radius="5dp" />
     <gradient
-        android:startColor="#1900ff"
-        android:endColor="#1900ff"
+        android:startColor="#ff0004"
+        android:endColor="#ff0004"
         android:type="linear"
         android:angle="270"/>
 </shape>
