--- a/app/src/main/res/layout/activity_district.xml
+++ b/app/src/main/res/layout/activity_district.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
 
     tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.DistrictActivity"
-    android:background="@drawable/beerza">
+    android:background="@drawable/zabgpage">
 
 
     <LinearLayout
@@ -43,13 +43,13 @@
         android:orientation="vertical"
         android:padding="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="60dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp" >
+        android:layout_marginBottom="45dp" >
 
         <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/listView2"
             android:layout_below="@+id/textView7" />
     </LinearLayout>
