--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -178,7 +178,7 @@
             android:layout_width="match_parent"
             android:layout_height="47dp"
             android:layout_centerHorizontal="true"
-            android:background="#9d00ff"
+            android:background="#00ae00"
             android:gravity="center_horizontal"
             android:orientation="vertical" >
 
