--- a/app/src/main/res/layout/activity_hotelmanu.xml
+++ b/app/src/main/res/layout/activity_hotelmanu.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/beerza">
+    android:background="@drawable/zazazazatour">
 
     <LinearLayout
         android:id="@+id/linearLayout36"
         android:layout_width="match_parent"
         android:layout_height="47dp"
         android:layout_centerHorizontal="true"
-        android:background="#9d00ff"
+        android:background="#00ae00"
         android:gravity="center_horizontal"
         android:orientation="vertical" >
 
@@ -38,13 +38,13 @@
         android:padding="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="40dp"
         android:layout_marginTop="20dp" >
 
         <ListView
             android:id="@+id/listView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_alignParentBottom="false"
             android:layout_alignParentLeft="false"
             android:layout_alignParentTop="false"
