--- a/app/src/main/res/layout/activity_manu.xml
+++ b/app/src/main/res/layout/activity_manu.xml
@@ -1,74 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/zazazaza">
 
-    <TextView
-        android:id="@+id/textView24"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Tour South Chil Chil"
-        android:textColor="@color/text"
-        android:textSize="@dimen/h1"
-        android:shadowColor="#333333"
-        android:shadowDx="3"
-        android:shadowDy="2"
-        android:shadowRadius="1"
-        android:paddingLeft="30dp"
-        android:background="#0c05e4" />
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="80dp"
+        android:text="NEW"
+        android:id="@+id/button8"
+        android:background="@drawable/button_shape16"
+        android:textSize="20dp"
+        android:textColor="#ffffff"
+        android:layout_marginTop="110dp" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout14"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_centerHorizontal="true"
-        android:background="#70ffffff"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:padding="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="20dp">
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="80dp"
+        android:text="สถานที่ท่องเที่ยวที่น่าสนใจ"
+        android:id="@+id/button9"
+        android:background="@drawable/button_shape6"
+        android:layout_marginTop="10dp"
+        android:textSize="20dp"
+        android:textColor="#ffffff"/>
 
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="80dp"
-            android:text="NEW"
-            android:id="@+id/button8"
-            android:background="@drawable/button_shape1"
-            android:textSize="20dp"
-            android:textColor="#ffffff" />
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="80dp"
+        android:text="สถานที่ท่องเที่ยวตามฤดูกาล"
+        android:id="@+id/button10"
+        android:background="@drawable/button_shape4"
+        android:layout_marginTop="10dp"
+        android:textSize="20dp"
+        android:textColor="#ffffff"/>
 
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="80dp"
-            android:text="สถานที่ท่องเที่ยวที่น่าสนใจ"
-            android:id="@+id/button9"
-            android:background="@drawable/button_shape6"
-            android:layout_marginTop="10dp"
-            android:textSize="20dp"
-            android:textColor="#ffffff"/>
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="80dp"
-            android:text="สถานที่ท่องเที่ยวตามฤดูกาล"
-            android:id="@+id/button10"
-            android:background="@drawable/button_shape4"
-            android:layout_marginTop="10dp"
-            android:textSize="20dp"
-            android:textColor="#ffffff"/>
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="80dp"
-            android:text="ข่าวสารการท่องเที่ยว"
-            android:id="@+id/button11"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/button_shape7"
-            android:textSize="20dp"
-            android:textColor="#ffffff"/>
-    </LinearLayout>
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="80dp"
+        android:text="ข่าวสารการท่องเที่ยว"
+        android:id="@+id/button11"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/button_shape15"
+        android:textSize="20dp"
+        android:textColor="#ffffff"/>
 
 </LinearLayout>
