--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -184,7 +184,7 @@
             android:layout_width="match_parent"
             android:layout_height="47dp"
             android:layout_centerHorizontal="true"
-            android:background="#9d00ff"
+            android:background="#ce000a"
             android:gravity="center_horizontal"
             android:orientation="vertical" >
 
