--- a/app/src/main/res/layout/my_listview.xml
+++ b/app/src/main/res/layout/my_listview.xml
@@ -1,26 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:padding="3dp">
 
-    <ImageView
+<!--    <ImageView
         android:id="@+id/imageView2"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_margin="10dp"
-        android:src="@drawable/dd" />
+        android:src="@drawable/dd" />-->
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/imageView2"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
+        app:civ_border_width="0dp"
+        app:civ_border_color="#FF5DAFED"/>
 
     <TextView
         android:id="@+id/txttest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:shadowColor="#333333"
+        android:shadowColor="#ffffff"
         android:shadowDx="3"
+        android:layout_marginLeft="5dp"
         android:shadowDy="2"
+        android:textColor="#000000"
         android:shadowRadius="1"
-        android:textColor="#FFFFFF"
         android:textSize="25sp"
         android:textStyle="bold" />
 
